--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,5 @@ language:
   - objective-c
 osx_image: 
   - xcode10.1
-before_install:
-   - pod cache clean --all    
-   - pod update
-install:
-- gem install xcpretty-travis-formatter
 script:
-  - xcodebuild test -project 'BlockObserver.xcodeproj' -scheme 'BlockObserverTests' | xcpretty -f `xcpretty-travis-formatter`
+  - swift test
